correction du dépassement des filtres, tablet et mobile - modification espacement des filtres (tablet)   + retrait des gap fixés   + adaptation du flex grow à 25% - width des filtres à 50% sur mobile (plutôt que 160px)

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -423,10 +423,19 @@ i.fa-info {
         border-radius: 0 0 20px 20px;
     }
     .filter-bar {
-        gap: 17px;
+        gap: unset;
+        justify-content: space-between;
     }
     .filter-bar>div {
-        gap: 22px;
+        gap: unset;
+        justify-content: space-between;
+        flex-grow: 0.25;
+    }
+    .filter-bar>div:first-of-type {
+        flex-grow: 0;
+    }
+    .filter {
+        flex-grow: 0;
     }
 }
 
@@ -501,7 +510,7 @@ i.fa-info {
         width: 100%;
     }
     .filter {
-        width: 160px;
+        width: 50%;
         padding: 16px 0 14px 13px;
         font-size: 11px;
     }
